--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "hmmh/solr-file-indexer",
+  "name": "ideative/solr-file-indexer",
   "description": "Solr file indexer for Typo3",
   "keywords": ["typo3", "solr", "file", "tika", "apache", "indexer"],
   "type": "typo3-cms-extension",
@@ -17,7 +17,7 @@
   "require": {
     "php": ">=7.0",
     "typo3/cms-core": ">=8.7 <9.4",
-    "typo3-ter/solr": ">=7.0 <8.2"
+    "apache-solr-for-typo3/solr": ">=6.0 <9"
   },
 
   "require-dev": {
